End-Points: creacion de controllers necesarios para los partidos, se realizo varios ajustes a codigo anteriores, se esta haciendo partidos